# messenger-backend

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: dev.json  test.json
migrations/models/: 0_20230119215942_init.py  0_20230120143649_init.py  1_20230120204225_update.py  2_20230121122614_update.py
package/: __main__.py
package/auth/: __init__.py  create_access_token.py  decode_access_token.py  exceptions.py  get_current_user.py
package/config/: Config.py  __init__.py
package/db/: BasePublicModel.py  PublicBase.py  __init__.py
package/db/models/: Chat.py  ChatMessage.py  ChatParticipant.py  Group.py  GroupMessage.py  GroupParticipant.py  Message.py  User.py
package/exceptions/: CustomException.py
package/exceptions/InvalidData/: InvalidDataException.py
package/injectors/: chat_participant_of.py
package/routes/: user.py
package/routes/auth/: __init__.py  exceptions.py
package/routes/chat/: __init__.py  exceptions.py
package/routes/exceptions/: user_exceptions.py
package/routes/inputs/: LoginInput.py  RegisterInput.py
package/shared/: SuccessResponse.py
tests/: conftest.py  test_auth.py
tests/fixtures/: auth_client.py  login_user.py  register_user.py
tests/shared/: AuthClient.py  TestIntersections.py  ValidatingTokenResponse.py  assert_ids.py  assert_intersection.py
tests/test_auth/: test_login.py  test_register.py
tests/test_chats/: test_info.py
tests/test_message/: test_delete_message.py  test_message.py  test_messages.py
tests/test_user/: test_bio.py  test_chats.py  test_me.py
(+33 files in other folders)
